# observability-lab

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  test.http
.devcontainer/: devcontainer.json  postCreateCommand.sh
frontend/: README.md  package-lock.json  package.json
infrastructure/: README.md  acr.bicep  app_insights.bicep  cosmos_db.bicep  dashboard.bicep  data_explorer.bicep  event_hub.bicep  k8s.bicep  keyvault.bicep  log_analytics.bicep  main-obs.bicep  main.bicep  openai.bicep  script.kql  setup_infra.sh
k8s-files/: collector-config.yaml  collector-for-otel-operator.yaml  collector.yaml  collector.yml  device-api-deployment-with-otel-operator.yaml  device-api-deployment.yaml  device-assistant-deployment.yaml  device-manager-deployment-with-otel-operator.yaml  device-manager-deployment.yaml  device-simulator-deployment.yaml  devices-api-deployment-with-otel-operator.yaml  devices-api-deployment.yaml  devices-data-simulator-deployment.yaml  devices-manager-deployment-with-otel-operator.yaml  devices-manager-deployment.yaml  devices-simulator-deployment.yaml  devices-state-manager-deployment-with-otel-operator.yaml  devices-state-manager-deployment.yaml  devices-telemetry-simulator-deployment.yml  otel-collector-deployment.yaml  otel-instrumentation.yaml  secret-store-ai.yaml  secret-store.yaml  secrets-store.yaml
sample-application/: .gitignore  README.md  (+5 more)
sample-application/device-assistant/: .env.sample  Dockerfile  README.md  chat.py  main.py  pyproject.toml
sample-application/device-assistant/device_assistant/: chat_models.py
(+84 files in other folders)
