[tool.poetry]
name = "device-assistant"
version = "0.1.0"
description = "Device Assistant"
authors = ["Observability workshop <ikulakowska@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
semantic-kernel = "^1.1.2"
pydantic = "^2.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
