[tool.poetry]
name = "device-assistant"
version = "0.1.0"
description = "Device Assistant"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
pydantic = "^2.7.4"
openai = "^1.46.0"
fastapi = {extras = ["standard"], version = "^0.114.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
